RESOLVED FIXED286729
REGRESSION (289535@main): Broke internal macOS downlevel builds
https://bugs.webkit.org/show_bug.cgi?id=286729
Summary REGRESSION (289535@main): Broke internal macOS downlevel builds
Abrar Rahman Protyasha
Reported 2025-01-29 21:34:09 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2025-01-29 21:42:02 PST
EWS
Comment 2 2025-01-29 21:46:57 PST
Committed 289543@main (1abf733e4519): <https://commits.webkit.org/289543@main> Reviewed commits have been landed. Closing PR #39747 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.