REGRESSION (289535@main): Broke internal macOS downlevel builds https://bugs.webkit.org/show_bug.cgi?id=286729 rdar://143865562

Unreviewed build fix.

-[PDFDocument resetFormFields:] was introduced in macOS 15. As such,
internal downlevel builds were missing the declaration for this API in
the macOS SDK's PDFDocumentPriv.h header, causing a build failure after
289535@main -- it moved SPI declarations inside !USE_APPLE_INTERNAL_SDK.

To address this build failure, we introduce a PlatformHave macro named
HAVE_PDFDOCUMENT_RESET_FORM_FIELDS, to guard this interface at compile
time.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Platform/spi/Cocoa/PDFKitSPI.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::handlePDFActionForAnnotation):

Drive-by cleanup: remove the respondsToSelector: check because
resetFormFields: has long existed in SDK headers of the relevant
platform versions.

Canonical link: https://commits.webkit.org/289543@main